fixed spacing around social icons (also changed from px to em)

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -34,13 +34,13 @@
   width: auto;
   font-weight: 300;
   margin: 0;
-  padding-top: 7px;
-  padding-bottom: 7px;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
   color: #7a7a7a;
   font-style: italic;
 }
 
 .post .post-content {
   border-bottom: thin solid #ccc;
-  padding-bottom: 15px;
+  padding-bottom: 1em;
 }
