--- a/_sass/_social-icons.scss
+++ b/_sass/_social-icons.scss
@@ -4,9 +4,9 @@
 }
 
 .share-links {
-  padding-top: 15px;
-  margin-top: 16px;
-  margin-bottom: 15px;
+  padding-top: 1em;
+  margin-top: 1em;
+  padding-bottom: 1em;
 }
 
 .share-links a.fa {
@@ -16,6 +16,6 @@
 }
 
 .fb-like {
-  margin-left: 15px;
-  margin-bottom: 3px;
+  margin-left: 0.3em;
+  margin-bottom: 0.3em;
 }
